--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 SECRET=igsedfigiaslgvfuiogvfuigv
-BASE_URL=http://localhost:8000
+BASE_URL=https://jobcatalyst-mhgu.onrender.com
 CLIENT_ID=QRSQ45tAUjAlAWxyjFJy9WBzfaK6XXj6
 ISSUER_BASE_URL=https://dev-fm5dt5hqp82yjupz.us.auth0.com
 CLIENT_URL=http://localhost:3000
